Fixing windowing code

--- a/04. morte_armas_australia_LSTM.ipynb
+++ b/04. morte_armas_australia_LSTM.ipynb
@@ -446,32 +446,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Realizando janelamento no dataset completo, pois temos poucas observações.\n",
-    "def get_lags(series, lags):\n",
-    "    result = []\n",
-    "    if lags > 0:\n",
-    "        for lag in range(1, lags+1):\n",
-    "            result.append(series.shift(lag).rename({series.columns[0]: series.columns[0]+'-'+str(lag)}, axis=1))\n",
-    "        return pd.concat(result, axis=1, names=list(range(-1,-lags))).dropna()\n",
-    "    else:\n",
-    "        for lag in range(-1, lags-1,-1):\n",
-    "            result.append(series.shift(lag).rename({series.columns[0]: series.columns[0]+'+'+str(abs(lag))}, axis=1))\n",
-    "        return pd.concat(result, axis=1, names=list(range(+1,-lags))).dropna()\n",
-    "\n",
-    "\n",
-    "WINDOW_SIZE = 2 ## Sazonalidade Avaliação de Política Pública\n",
-    "\n",
-    "sliding_windows_df = get_lags(df, WINDOW_SIZE)\n",
-    "X = sliding_windows_df\n",
-    "y = df.reindex(X.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
@@ -727,7 +701,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow",
+   "display_name": "tf_2.11",
    "language": "python",
    "name": "python3"
   },
@@ -741,12 +715,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "742558e25e818f9cb924f4a360e6069e5660fce98b283ffeab4a534cb392f45d"
+    "hash": "29b8e65ec549b9420d78ad852fc62066cd09a336f9ce424b28f1a0109e8a5be2"
    }
   }
  },
